workloads/myapptodo-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapptodo
  namespace: myapp
  labels:
    app: myapptodo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/api/todo"
spec:
  rules:
    - host: 40.85.73.119.xip.io
      http:
        paths:
          - path: /api/todo
            backend:
              serviceName: myapptodo
              servicePort: 8080
